--- a/assets/templates/new/redesign.css
+++ b/assets/templates/new/redesign.css
@@ -186,6 +186,10 @@ body.is_scrolled .menu-wrapper {
   display: block;
 }
 
+.header .social {
+  align-items: center;
+}
+
 .container-fluid-row,
 .container-fluid-row-full-width > .row-fluid {
   max-width: 1210px;
@@ -568,19 +572,11 @@ body.is_scrolled .menu-wrapper {
   top: 14px;
 }
 
-.litecheckout .litecheckout__input:-ms-input-placeholder:not(:focus):not(:focus-within) + .litecheckout__label {
-  top: 14px;
-}
-
 .litecheckout .litecheckout__input:placeholder-shown:not(:focus):not(:focus-within) + .litecheckout__label {
   top: 14px;
 }
 
 .litecheckout .litecheckout__input:-moz-placeholder-shown:not(:focus) + .litecheckout__label, .litecheckout select:-moz-placeholder-shown:not(:focus) + .litecheckout__label {
-  left: 20px;
-}
-
-.litecheckout .litecheckout__input:-ms-input-placeholder:not(:focus) + .litecheckout__label, .litecheckout select:-ms-input-placeholder:not(:focus) + .litecheckout__label {
   left: 20px;
 }
 
@@ -648,8 +644,8 @@ body.is_scrolled .menu-wrapper {
 }
 @media screen and (max-width: 575px) {
   .cm-processing-personal-data > *,
-.cm-processing-personal-data > *:first-child,
-.cm-processing-personal-data > *:last-child {
+  .cm-processing-personal-data > *:first-child,
+  .cm-processing-personal-data > *:last-child {
     flex: 1 1 100%;
     max-width: 100%;
   }
@@ -885,6 +881,10 @@ body.is_scrolled .menu-wrapper {
   background-color: #fff;
 }
 
+.subcategories-popular:empty + .popular-button {
+  display: none;
+}
+
 .subcategories-popular-wrapper._expanded .popular-button {
   transform: translateY(150%);
 }
@@ -957,8 +957,20 @@ body.is_scrolled .menu-wrapper {
   box-shadow: 0 0 0 1px #d9d9d9;
 }
 
+.ty-sort-dropdown__content {
+  min-width: -moz-min-content;
+  min-width: min-content;
+}
+
 .ty-sort-dropdown__content-item-a:not(:last-child) {
   border-bottom: 1px solid #d9d9d9;
+}
+
+.ty-sort-dropdown__content #mse2_sort a.active,
+.ty-sort-dropdown__content #mse2_tpl a.active {
+  color: #333;
+  font-weight: 500;
+  background: #eaeaea;
 }
 
 .ty-product-filters__group [type=checkbox]:checked + label {
@@ -1133,6 +1145,24 @@ select:focus {
   line-height: 1.25;
 }
 
+.ut2-filters .ty-product-filters {
+  overflow: hidden;
+  padding: 0;
+  transition: max-height 0.3s;
+}
+
+.ut2-filters .ty-product-filters__switch + .ty-product-filters {
+  max-height: 0;
+}
+
+.ut2-filters .ty-product-filters__switch.open + .ty-product-filters {
+  max-height: 335px;
+}
+
+.ut2-filters .ty-product-filters__item-more {
+  padding: 0 0 25px;
+}
+
 .ty-sort-container {
   border: none;
   padding: 17px 22px 15px;
@@ -1171,6 +1201,7 @@ select:focus {
 }
 
 .ty-sort-dropdown__content-item-a {
+  padding: 7px 24px;
   font-weight: 400;
 }
 
@@ -1183,8 +1214,8 @@ select:focus {
 .ty-product-list__body .ut2-pl__image img {
   height: 212px;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .ty-product-list__col {
@@ -1221,14 +1252,11 @@ select:focus {
   width: 32px;
   float: right;
   height: 32px;
+  border: none;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.comparison .comparison-add {
-  display: flex !important;
 }
 
 .ut2-quick-view-button:hover,
@@ -1255,8 +1283,20 @@ select:focus {
   line-height: 18px;
 }
 
+.comparison.added .comparison-remove {
+  background-color: #ffc700;
+}
+
+.comparison.added .comparison-remove svg {
+  color: #fff;
+}
+
 .ut2-add-to-wish.voted {
   background-color: #ffc700;
+}
+
+.ut2-pb__button .btns-features svg {
+  color: #ffc700;
 }
 
 .ut2-add-to-wish.voted svg {
@@ -1287,7 +1327,7 @@ select:focus {
 
 .ut2-gl__qty,
 .ut2-pl__qty {
-  flex: 1 1 auto;
+  flex: 1 0 auto;
   float: none;
   max-width: 110px;
 }
@@ -1308,7 +1348,7 @@ select:focus {
 }
 
 .ty-product-list__body .ut2-pl__price > div:first-child {
-  flex-shrink: 0;
+  align-items: center;
   margin-right: 15px;
 }
 
@@ -1348,7 +1388,6 @@ select:focus {
 }
 
 .ty-product-list .ut2-pl__price {
-  flex-wrap: wrap;
   flex-direction: row;
   padding-bottom: 10px;
   justify-content: space-between;
@@ -1527,6 +1566,11 @@ select:focus {
   margin-top: 3px;
   border-radius: 50%;
   background-color: currentColor;
+}
+
+.ty-product-list .stock-wrap .ty-control-group__item {
+  display: block;
+  padding-left: 15px;
 }
 
 .ty-product-list .stock-wrap .ty-control-group__item i::before {
@@ -1934,20 +1978,23 @@ body .calc-prod .ut2-pb__right {
 .ty-product-block .ty-qty-in-stock,
 .ty-product-block .on_backorder,
 .ty-product-block .ty-qty-out-of-stock {
+  height: 1em;
+  display: block;
   padding: 0;
   background: transparent;
   font-weight: 500;
+  padding-left: 15px;
   border-radius: 0;
 }
 
 .calc-prod .calc_box {
+  margin: 10px 0 20px;
   display: flex;
+  padding: 20px 30px;
   flex-wrap: wrap;
   font-size: 16px;
   border-color: #d9d9d9;
   border-radius: 0;
-  margin: 10px 0 20px;
-  padding: 20px 30px;
 }
 
 .card-c {
@@ -2031,14 +2078,11 @@ body .calc-prod .ut2-pb__right {
   font-size: 14px;
 }
 
-.ut2-pb__button .btns-features svg {
-  color: #ffd600;
-}
-
 .ut2-pb__button .btns-features .ut2-add-to-wish,
 .ut2-pb__button .btns-features .ut2-add-to-compare {
   width: 45px;
   height: 45px;
+  border: none;
   display: flex;
   box-shadow: 0 0 0 1px #d9d9d9;
   align-items: center;
@@ -2151,7 +2195,7 @@ body .calc-prod .ut2-pb__right {
 }
 @media screen and (max-width: 812px) {
   .ut2-pb__img-wrapper,
-.ut2-pb__right {
+  .ut2-pb__right {
     flex: 1 1 100%;
     max-width: 100%;
   }
@@ -2257,8 +2301,8 @@ body .calc-prod .ut2-pb__right {
 }
 @media (max-width: 540px) {
   .row_form_a,
-.row_form_b,
-#vopros_form textarea {
+  .row_form_b,
+  #vopros_form textarea {
     width: 100%;
   }
 }
@@ -2393,7 +2437,6 @@ a.ty-quick-view__title {
   min-height: 0;
   max-height: none;
   -webkit-hyphens: none;
-      -ms-hyphens: none;
           hyphens: none;
 }
 
@@ -2401,7 +2444,6 @@ a.ty-quick-view__title {
 .owl-carousel:not(.ty-scroller-pd).ty-scroller-list .ut2-gl__item:hover .ut2-gl__name .product-title {
   max-height: none;
   -webkit-hyphens: none;
-      -ms-hyphens: none;
           hyphens: none;
 }
 
@@ -2599,7 +2641,6 @@ a.ty-quick-view__title {
 .ab__mb_item-name {
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
 }
@@ -2771,6 +2812,72 @@ a.ty-quick-view__title {
   right: 0;
 }
 
+/** smart search **/
+.search__inner {
+  padding: 0;
+  position: relative;
+}
+
+input[type=text].input-search-panel {
+  padding: 8px 55px;
+}
+
+.search-panel .search-logo,
+.search-panel__close {
+  top: 0;
+  top: 50%;
+  left: 20px;
+  z-index: 1;
+  position: absolute;
+  transform: translateY(-50%);
+}
+
+.search-panel__close {
+  left: auto;
+  right: 20px;
+}
+
+.ui-menu.ui-widget {
+  z-index: 1000001;
+  padding: 40px 20px 20px;
+  position: relative;
+  background: transparent;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.05);
+  font-family: inherit;
+  border-radius: 10px;
+}
+
+.ui-menu.ui-widget > * {
+  position: relative;
+}
+
+.ui-menu.ui-widget::before {
+  top: 20px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: "";
+  position: absolute;
+  background: #fff;
+  border-radius: 10px;
+}
+
+.ui-menu.ui-widget .mse2-ac-item {
+  padding: 10px 20px;
+}
+
+.ui-menu.ui-widget .mse2-ac-link {
+  border-radius: 5px;
+}
+
+.ui-menu .ui-state-active,
+.ui-menu .ui-widget-content .ui-state-active,
+.ui-menu .ui-widget-header .ui-state-active {
+  border: none;
+  text-decoration: underline;
+  background-color: #f0f0f0;
+}
+
 /** responsive **/
 @media screen and (min-width: 496px) {
   .span16 .ut2-pb .ty-tabs__content {
@@ -2795,6 +2902,13 @@ a.ty-quick-view__title {
     padding: 21px 29px;
     background: #fff;
     box-shadow: 0 0 0 1px #d9d9d9;
+    max-height: calc(100vh - 60px);
+    overflow-x: hidden;
+    overflow-y: auto;
+    scrollbar-width: thin;
+  }
+  .ut2-filters > div::-webkit-scrollbar {
+    width: 8px;
   }
   .ut2-pb__img-wrapper {
     padding-right: 15px;
@@ -2805,8 +2919,8 @@ a.ty-quick-view__title {
     padding-right: 0;
   }
   .ab__sf_cat_desc .ty-wysiwyg-content p,
-.ab__sf_cat_desc .ty-wysiwyg-content li,
-.ab__sf_cat_desc .ty-wysiwyg-content tr > * {
+  .ab__sf_cat_desc .ty-wysiwyg-content li,
+  .ab__sf_cat_desc .ty-wysiwyg-content tr > * {
     font-size: 16px;
   }
 }
@@ -2880,12 +2994,12 @@ a.ty-quick-view__title {
     margin-top: 0;
   }
   .second-menu.second-menu-el7,
-.second-menu.second-menu-el6,
-.second-menu.second-menu-el5,
-.second-menu.second-menu-el4,
-.second-menu.second-menu-el3,
-.second-menu.second-menu-el2,
-.second-menu.second-menu-el1 {
+  .second-menu.second-menu-el6,
+  .second-menu.second-menu-el5,
+  .second-menu.second-menu-el4,
+  .second-menu.second-menu-el3,
+  .second-menu.second-menu-el2,
+  .second-menu.second-menu-el1 {
     top: 100%;
     width: 100%;
     height: 330px;
@@ -2955,12 +3069,17 @@ a.ty-quick-view__title {
     font-size: 14px;
   }
   input[type=text],
-input[type=password],
-input[type=tel],
-input[type=number],
-textarea,
-select {
+  input[type=password],
+  input[type=tel],
+  input[type=number],
+  textarea,
+  select {
     font-size: 14px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .ty-product-list__body .ut2-pl__image .image-reload {
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 767px) {
@@ -2975,7 +3094,7 @@ select {
     margin: 0;
   }
   .ty-breadcrumbs__a,
-.ty-breadcrumbs__current {
+  .ty-breadcrumbs__current {
     font-size: 12px;
   }
   .ty-breadcrumbs__slash {
@@ -2983,7 +3102,7 @@ select {
     font-size: 12px;
   }
   .ty-breadcrumbs__current,
-.ty-breadcrumbs + a.ut2-btn.hidden {
+  .ty-breadcrumbs + a.ut2-btn.hidden {
     display: inline-block;
   }
   .ut2-extra-block-title .ty-mainbox-title {
@@ -3004,17 +3123,16 @@ select {
     padding: 20px 30px;
   }
   .is_scrolled .ty-dropdown-box.ut2-filters div.ty-dropdown-box__content,
-.is_scrolled .ty-dropdown-box.ut2-categories div.ty-dropdown-box__content {
+  .is_scrolled .ty-dropdown-box.ut2-categories div.ty-dropdown-box__content {
     top: 59px;
   }
   .ty-dropdown-box.ut2-filters .ut2-btn-close,
-.ty-dropdown-box.ut2-categories .ut2-btn-close {
+  .ty-dropdown-box.ut2-categories .ut2-btn-close {
     top: 10px;
     right: 10px;
   }
   .ty-wysiwyg-content td,
-.ty-wysiwyg-content th {
-    min-width: -webkit-min-content;
+  .ty-wysiwyg-content th {
     min-width: -moz-min-content;
     min-width: min-content;
   }
@@ -3048,7 +3166,7 @@ select {
     margin-bottom: 0;
   }
   .ty-dropdown-box.ut2-filters .ty-dropdown-box__title,
-.ty-dropdown-box.ut2-categories .ty-dropdown-box__title {
+  .ty-dropdown-box.ut2-categories .ty-dropdown-box__title {
     height: 35px;
     border: none;
     padding: 0;
@@ -3056,26 +3174,37 @@ select {
     background: #ffc700;
     border-radius: 0;
   }
+  .ty-dropdown-box.ut2-filters .ty-dropdown-box__title.open,
+  .ty-dropdown-box.ut2-filters:hover.ty-dropdown-box__title.open,
+  .ty-dropdown-box.ut2-categories .ty-dropdown-box__title.open,
+  .ty-dropdown-box.ut2-categories:hover.ty-dropdown-box__title.open {
+    box-shadow: none;
+    background: #ffc700;
+  }
   .ty-dropdown-box.ut2-filters .ty-dropdown-box__title:hover,
-.ty-dropdown-box.ut2-categories .ty-dropdown-box__title:hover {
+  .ty-dropdown-box.ut2-categories .ty-dropdown-box__title:hover {
     box-shadow: none;
     background: #ffc700;
   }
   .ty-dropdown-box.ut2-filters .ty-dropdown-box__title a {
-    display: none;
+    font-family: inherit;
+    font-weight: 600;
+  }
+  .ty-dropdown-box.ut2-filters .ty-dropdown-box__title svg {
+    margin-right: 10px;
   }
   .cat-content-grid .side-grid {
-    width: 35px;
+    width: auto;
     margin: 30px 0 -10px !important;
     padding: 0;
   }
   .mse2_pagination,
-.ab__sf_cat_desc {
+  .ab__sf_cat_desc {
     float: none;
     width: 100%;
   }
   .ty-pagination__item,
-.ty-pagination__selected {
+  .ty-pagination__selected {
     height: 35px;
     min-width: 35px;
     line-height: 35px;
@@ -3084,7 +3213,7 @@ select {
     display: none;
   }
   .ty-pagination .ty-pagination__selected + a,
-.ty-pagination .ty-pagination__selected + a + a {
+  .ty-pagination .ty-pagination__selected + a + a {
     display: inline-block !important;
   }
   .ty-wysiwyg-content * {
@@ -3106,9 +3235,9 @@ select {
     padding-right: 35px;
   }
   .ty-subheader,
-div.ty-mainbox-title,
-.ty-footer-form-block__title,
-a.ty-quick-view__title {
+  div.ty-mainbox-title,
+  .ty-footer-form-block__title,
+  a.ty-quick-view__title {
     font-size: 20px;
   }
   .ty-tabs__content .owl-theme .owl-controls .owl-page span {
@@ -3169,6 +3298,14 @@ a.ty-quick-view__title {
   .grid-list div[class^=ty-column] {
     width: 100%;
     max-width: 100%;
+  }
+  .ty-mainbox-body .ty-wysiwyg-content table td,
+  .ut2-cat-container .ty-wysiwyg-content table td,
+  .ty-wysiwyg-content[class*=description]:not(.content-features) table td {
+    padding: 5px 10px;
+  }
+  .ty-wysiwyg-content * {
+    line-height: 1.25;
   }
 }
 @media screen and (max-width: 479px) {
