wysiwig fix, popup background fix

--- a/assets/templates/new/redesign.css
+++ b/assets/templates/new/redesign.css
@@ -659,6 +659,10 @@ body.is_scrolled .menu-wrapper {
   padding: 20px 25px;
 }
 
+.ty-wysiwyg-content[class*=description]:not(.content-features):empty {
+  display: none;
+}
+
 .ty-wysiwyg-content {
   max-width: 870px;
   line-height: 1.8;
@@ -672,7 +676,7 @@ body.is_scrolled .menu-wrapper {
   padding: 0;
 }
 
-.ty-wysiwyg-content * + * {
+.ty-wysiwyg-content > * + * {
   font-size: 14px;
   padding-top: 2em;
 }
@@ -1715,7 +1719,7 @@ select:focus {
 
 /** popup dialog **/
 .ui-widget-content {
-  background: #ddd;
+  background: #fff;
 }
 
 div.ui-dialog .ui-dialog-titlebar {
